// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`calculate simulations-indépendant > Année incomplète 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > Année incomplète 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3728
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1342
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3728"
`;

exports[`calculate simulations-indépendant > Année incomplète 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7183
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1550
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5154
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7183"
`;

exports[`calculate simulations-indépendant > Année incomplète 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14081
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2952
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14081"
`;

exports[`calculate simulations-indépendant > Année incomplète 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140575
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30366
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103017
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73818
indépendant . rémunération . totale: 140575"
`;

exports[`calculate simulations-indépendant > Année incomplète 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1271850
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154302
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035108
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528564
indépendant . rémunération . totale: 1271850"
`;

exports[`calculate simulations-indépendant > DROM 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000

Notifications affichées : indépendant . cotisations et contributions . cotisations . exonérations . DROM"
`;

exports[`calculate simulations-indépendant > acre 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 72944
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 17590
indépendant . cotisations et contributions . début activité: 1712
indépendant . revenu professionnel: 51565
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41365
indépendant . rémunération . totale: 72944"
`;

exports[`calculate simulations-indépendant > activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28445
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6286
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28445"
`;

exports[`calculate simulations-indépendant > activité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28473
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6292
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20611
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 19433
indépendant . rémunération . totale: 28473"
`;

exports[`calculate simulations-indépendant > années précédentes 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 87623
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 60000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 87623"
`;

exports[`calculate simulations-indépendant > années précédentes 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > années précédentes 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: 40000
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: undefined"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 79318
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19089
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51702
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41324
indépendant . rémunération . totale: 79318"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 81039
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 19517
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51739
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41313
indépendant . rémunération . totale: 81039"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 85815
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 20742
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51842
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41282
indépendant . rémunération . totale: 85815"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75293
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 14570
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51616
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41350
indépendant . rémunération . totale: 75293"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 75296
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 12039
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 51616
indépendant . rémunération . nette: 50000
indépendant . rémunération . nette . après impôt: 41350
indépendant . rémunération . totale: 75296"
`;

exports[`calculate simulations-indépendant > conjoint collaborateur 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 680434
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 93268
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 517957
indépendant . rémunération . nette: 500000
indépendant . rémunération . nette . après impôt: 281968
indépendant . rémunération . totale: 680434"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 30000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 20000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations facultatives 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 300000"
`;

exports[`calculate simulations-indépendant > cotisations forfaitaires début d'activité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 3521
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 50000"
`;

exports[`calculate simulations-indépendant > cotisations minimales 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1447
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1169
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 118
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 1447"
`;

exports[`calculate simulations-indépendant > cotisations minimales 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 218
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 0
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 100
indépendant . rémunération . nette: 100
indépendant . rémunération . nette . après impôt: 100
indépendant . rémunération . totale: 218"
`;

exports[`calculate simulations-indépendant > cotisations minimales 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 973
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 41
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 804
indépendant . rémunération . nette: 800
indépendant . rémunération . nette . après impôt: 800
indépendant . rémunération . totale: 973"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 45000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 9000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: 987
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 10000"
`;

exports[`calculate simulations-indépendant > exonération pension invalidité 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 15000"
`;

exports[`calculate simulations-indépendant > exonération âge 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: undefined
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: undefined
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: undefined
indépendant . rémunération . nette: undefined
indépendant . rémunération . nette . après impôt: undefined
indépendant . rémunération . totale: 55000"
`;

exports[`calculate simulations-indépendant > imposition à l'IR 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 100000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 23426
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 71424
indépendant . rémunération . nette: 69278
indépendant . rémunération . nette . après impôt: 54685
indépendant . rémunération . totale: 100000"
`;

exports[`calculate simulations-indépendant > impôt sur le revenu 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 28445
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 6286
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 20610
indépendant . rémunération . nette: 20000
indépendant . rémunération . nette . après impôt: 17939
indépendant . rémunération . totale: 28445"
`;

exports[`calculate simulations-indépendant > inversions IR 1`] = `
"entreprise . charges: 1000
entreprise . chiffre d'affaires: 20000
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 4032
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 13894
indépendant . rémunération . nette: 13486
indépendant . rémunération . nette . après impôt: 13486
indépendant . rémunération . totale: 19000"
`;

exports[`calculate simulations-indépendant > inversions IR 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14081
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2952
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14081"
`;

exports[`calculate simulations-indépendant > inversions IR 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 62376
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 15541
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 43578
indépendant . rémunération . nette: 42239
indépendant . rémunération . nette . après impôt: 36000
indépendant . rémunération . totale: 62376"
`;

exports[`calculate simulations-indépendant > inversions IS 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14081
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2952
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14081"
`;

exports[`calculate simulations-indépendant > inversions IS 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14081
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2952
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14081"
`;

exports[`calculate simulations-indépendant > échelle de revenus 1`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1933
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1208
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 532
indépendant . rémunération . nette: 500
indépendant . rémunération . nette . après impôt: 500
indépendant . rémunération . totale: 1933"
`;

exports[`calculate simulations-indépendant > échelle de revenus 2`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 2542
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1258
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1050
indépendant . rémunération . nette: 1000
indépendant . rémunération . nette . après impôt: 1000
indépendant . rémunération . totale: 2542"
`;

exports[`calculate simulations-indépendant > échelle de revenus 3`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3150
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1307
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1567
indépendant . rémunération . nette: 1500
indépendant . rémunération . nette . après impôt: 1500
indépendant . rémunération . totale: 3150"
`;

exports[`calculate simulations-indépendant > échelle de revenus 4`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 3728
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1342
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 2080
indépendant . rémunération . nette: 2000
indépendant . rémunération . nette . après impôt: 2000
indépendant . rémunération . totale: 3728"
`;

exports[`calculate simulations-indépendant > échelle de revenus 5`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 7183
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 1550
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 5154
indépendant . rémunération . nette: 5000
indépendant . rémunération . nette . après impôt: 5000
indépendant . rémunération . totale: 7183"
`;

exports[`calculate simulations-indépendant > échelle de revenus 6`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 14081
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 2952
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 10302
indépendant . rémunération . nette: 10000
indépendant . rémunération . nette . après impôt: 10000
indépendant . rémunération . totale: 14081"
`;

exports[`calculate simulations-indépendant > échelle de revenus 7`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 140575
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 30366
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 103017
indépendant . rémunération . nette: 100000
indépendant . rémunération . nette . après impôt: 73818
indépendant . rémunération . totale: 140575"
`;

exports[`calculate simulations-indépendant > échelle de revenus 8`] = `
"entreprise . charges: 0
entreprise . chiffre d'affaires: 1271850
impôt . montant: undefined
indépendant . cotisations et contributions . cotisations: 154302
indépendant . cotisations et contributions . début activité: null
indépendant . revenu professionnel: 1035108
indépendant . rémunération . nette: 1000000
indépendant . rémunération . nette . après impôt: 528564
indépendant . rémunération . totale: 1271850"
`;
